8166191: Missing spaces in log message during heap expansion
Reviewed-by: tschatzl